# bit_vector

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  annotated.html  annotated_dup.js  bit__vector_8hpp_source.html  block__compressed__bit__vector_8hpp_source.html  citelist.html  classes.html  classpasta_1_1BitAccess-members.html  classpasta_1_1BitAccess.html  classpasta_1_1BitAccess.js  classpasta_1_1BitVector-members.html  classpasta_1_1BitVector.html  classpasta_1_1BitVector.js  classpasta_1_1BlockCompressedBitVector-members.html  classpasta_1_1BlockCompressedBitVector.html  classpasta_1_1BlockCompressedBitVector.js  classpasta_1_1FlatRank-members.html  classpasta_1_1FlatRank.html  classpasta_1_1FlatRank.js  classpasta_1_1FlatRankSelect-members.html  classpasta_1_1FlatRankSelect.html  classpasta_1_1FlatRankSelect.js  classpasta_1_1FlatRankSelect__coll__graph.map  classpasta_1_1FlatRankSelect__coll__graph.md5  classpasta_1_1FlatRankSelect__inherit__graph.map  classpasta_1_1FlatRankSelect__inherit__graph.md5  classpasta_1_1Rank-members.html  classpasta_1_1Rank.html  classpasta_1_1Rank.js  classpasta_1_1RankSelect-members.html  classpasta_1_1RankSelect.html  classpasta_1_1RankSelect.js  classpasta_1_1RankSelect__inherit__graph.map  (+130 more)
.github/workflows/: Dockerfile  clang-format-check.yml  ctest.yml  doxygen.yml
benchmarks/: ads_data_generation.cpp  bit_vector_benchmark.cpp  compression_test.cpp
bit_vector/: bit_vector.cpp  bit_vector.hpp
bit_vector/support/: bit_vector_flat_rank.hpp  bit_vector_flat_rank_select.hpp  bit_vector_flat_rank_support.hpp  bit_vector_rank.cpp  bit_vector_rank.hpp  bit_vector_rank_select.cpp  bit_vector_rank_select.hpp  bit_vector_wide_rank.hpp  bit_vector_wide_rank_select.hpp  find_l2_flat_with.hpp  find_l2_wide_with.hpp  flattened_rank_support.hpp  l12_type.hpp  optimized_for.hpp  popcount.hpp  select.hpp  use_intrinsics.hpp
docs/: CMakeLists.txt  Doxyfile  literature.bib  main.dox
docs/custom_doxygen/: custom.css  header.html
include/pasta/bit_vector/: bit_vector.hpp
include/pasta/bit_vector/compression/: block_compressed_bit_vector.hpp
include/pasta/bit_vector/support/: bit_vector_flat_rank.hpp  bit_vector_flat_rank_select.hpp  bit_vector_rank.hpp  bit_vector_rank_select.hpp  bit_vector_wide_rank.hpp  bit_vector_wide_rank_select.hpp  find_l2_flat_with.hpp  find_l2_wide_with.hpp  flat_rank.hpp  flat_rank_select.hpp  hackathon_select.hpp  l12_type.hpp  optimized_for.hpp  popcount.hpp  rank.hpp  rank_select.hpp  select.hpp  wide_rank.hpp  wide_rank_select.hpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+23 more)
tests/: CMakeLists.txt
tests/bit_vector/: bit_vector_test.cpp
tests/bit_vector/support/: bit_vector_flat_rank_select_test.cpp  bit_vector_flat_rank_test.cpp  bit_vector_flattened_rank_test.cpp  bit_vector_rank_select_test.cpp  bit_vector_rank_test.cpp  bit_vector_wide_rank_select_test.cpp  bit_vector_wide_rank_test.cpp
